bk_ida/gccida/c0/alter_subreg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3205:30: error: use of undeclared identifier 'machine_mode'
*xp = adjust_address_1( y, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), *( _DWORD *)&x[1], 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3205:45: error: expected expression
*xp = adjust_address_1( y, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), *( _DWORD *)&x[1], 1, 1); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3210:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3210:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3212:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3212:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/final.c:3225:19: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&x[1] = y[1]; 
                  ^ ~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alter_subreg/src/obj/final.o] Error 1
